...
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Type"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_location" />

            <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
...
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/edt_pName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
...
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/edt_pPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
...
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_pName" />

            <EditText
                android:id="@+id/edt_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="Average Cost"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_open" />

            <EditText
                android:id="@+id/edt_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
...
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/edt_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edt_location" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
...
                    android:checked="false"
                    android:clickable="true"
                    android:text="Place" />


                <RadioButton
                    android:id="@+id/rdo_event"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="true"
                    android:text="Event" />
...
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="@dimen/margin_start"
                    android:background="#B4B4B4" />

                <RadioButton
                    android:id="@+id/rdo_yesOwn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="true"
                    android:text="Yes, I'm the owner/manager" />
...
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="@dimen/margin_start"
                    android:background="#B4B4B4" />
            </RadioGroup>

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbGroup_Owner" />

            <Button
                android:id="@+id/btn_ChoosePict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_weight="1"
                android:backgroundTint="#00000000"
                android:text="Choose File"
...
                android:inputType="time"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/time_close"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="Close"
...

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_submitData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/colorPrimary"
...
