<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".Login.SignInActivity">

    <TextView
        android:textStyle="bold"
        android:text="PICKNIK"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@drawable/loginfix"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:foreground="#66000000"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="160dp">


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailSubject"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#D6D6D6"/>



        <EditText
            android:id="@+id/edtPassword"
            android:hint="Password"
            android:textColorHint="#D6D6D6"
            android:textColor="#ffffff"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnSingIn"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/btnstyle"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#fff"
        android:visibility="invisible"/>


</RelativeLayout>