<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/baseline_search_black_24dp"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_outline_black_24dp"
        android:title="@string/nav_profile" />
</menu>