...
            android:text="Unknown"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/avtr_profile"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <Button
            android:id="@+id/btn_inputPlace"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00000000"
            android:text="Add Place"
            android:textAllCaps="false"
...
